# downstream-fairness

./: .gitignore  .gitlab-ci.yml  LICENSE.txt  README.md  pyproject.toml  requirements.txt
downstream_fairness/: process.py  train.py
downstream_fairness/utils/: barycenter.py  constants.py  metrics.py
example/: Demo.ipynb  visualizations.py
example/demo_helper/: data.py  eval.py  plot.py
examples/: Demo.ipynb
examples/data_raw/: results_adult_new.json  results_public.json
examples/demo_helper/: data.py
rename_me/: process.py  train.py  utils.py  version.py
test/: requirements.txt  test_barycenter.py  test_process.py  test_train.py
