[build-system]
requires = ["setuptools>=64.0.0"]  # support for editable installs via pyproject was added in v64
build-backend = "setuptools.build_meta"

[project]
name = "FILL ME IN"
description = "FILL ME IN "
authors = [
    {"name" = 'ArthurAI', "email" = "info@arthur.ai"}
]
readme = "README.md"
license = {text = "MIT"}
classifiers = []  # fill this in if publishing to public pypi
dynamic = ["version"]

dependencies = [
    # FILL ME IN
    "numpy~=1.0"  # example, remove if not using
]

[metadata]
url = 'http://arthur.ai'

[tool.setuptools.packages.find]
exclude = ["test"]

[tool.setuptools.dynamic]
version = {attr = "rename_me.__version__"}