[build-system]
requires = ["setuptools>=64.0.0"]  # support for editable installs via pyproject was added in v64
build-backend = "setuptools.build_meta"

[project]
name = "downstream_fairness"
description = "A new post-processing fairness algorithm that operates on the output probabilities of a binary classifier"
authors = [
    {"name" = 'Daniel Nissani', "email" = "daniel.nissani@arthur.ai"}
]
readme = "README.md"
license = {text = "MIT"}
classifiers = []  # fill this in if publishing to public pypi
dynamic = ["version"]

dependencies = [
    "numpy==1.24.2",
    "pandas==2.0.0",
    "POT==0.9.0",
    "python-dateutil==2.8.2",
    "pytz==2023.3",
    "scipy==1.10.1",
    "six==1.16.0",
    "tzdata==2023.3"
]

[metadata]
url = 'http://arthur.ai'

[tool.setuptools.packages.find]
exclude = ["test", "examples"]

 [tool.setuptools.dynamic]
 version = {attr = "downstream_fairness.__version__"}