[build-system]
requires = ["setuptools>=64.0.0"]  # support for editable installs via pyproject was added in v64
build-backend = "setuptools.build_meta"

[project]
name = "downstream_fairness"
description = "A new post-processing fairness algorithm that operates on the output probabilities of a binary classifier"
authors = [
    {"name" = 'Arthur', "email" = "info@arthur.ai"},
    {"name" = 'Daniel Nissani', "email" = "daniel.nissani@arthur.ai"}
]
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
dynamic = ["version"]

dependencies = [
    "numpy>=1.19.0,<2",
    "pandas>=1.2.0",
    "POT==0.9.0",
    "python-dateutil>=2.7,<3",
    "pytz>=2020.1",
    "scipy~=1.10.1",
    "tzdata==2020.1"
]

[project.urls]
Homepage = 'http://arthur.ai'
Repository = "https://github.com/arthur-ai/downstream-fairness"

[tool.setuptools.packages.find]
include = ["downstream_fairness", "downstream_fairness.*"]
exclude = ["test", "test.*"]

 [tool.setuptools.dynamic]
 version = {attr = "downstream_fairness.__version__"}
